# ecommerce

./: .env  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 211f76e1f876_ds.py  5cfbca074d42_ds.py  717690816e01_ds.py  d9718d6ae7f1_ds.py
app/: main.py
app/core/: conf.py
app/db/: __init__.py
app/models/: __init__.py  categories.py  products.py
app/routers/: __init__.py
app/routers/products/: crud.py  schemas.py  views.py
